changed recommendation section

--- a/src/app/pages/home/recommend-collection/recommend-collection.component.html
+++ b/src/app/pages/home/recommend-collection/recommend-collection.component.html
@@ -21,3 +21,249 @@
     </div>
 </div>
 <div class="mb-4"></div>
+<div class="recomand-div">
+    <div class="container">
+        <div class="recomandmain">
+            <div class="heading">
+                <p><span><i class="fa-solid fa-face-smile"></i></span>Specially For You</p>
+                <h3>Recommendation</h3>
+            </div>
+            <div class="row">
+                <div class="col-sm-4" routerLink="/product/hdd-hard-disk-drive/desktop-1tb-hard-disk-drive">
+                    <div class="man-div">
+                        <div class="row">
+                            <div class="col-5">
+                                <div class="main-image-div">
+                                    <img src="https://geonix.s3.us-east-2.amazonaws.com/13/Geonix%201TB%20Hard%20Disk%20Drive/1.jpg">
+                                </div>
+                            </div>
+                            <div class="col-7">
+                                <div class="main-content-div">
+                                    <div class="extra">
+                                        <div class="rating">
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star-half-stroke"></i>
+                                        </div>
+                                        <p>Desktop 1TB Hard Disk Drive</p>
+                                        <p class="price"> ₹ 2249 <span> ₹ 3999 </span></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4" routerLink="/product/hdd-hard-disk-drive/desktop-2tb-hard-disk-drive">
+                    <div class="man-div">
+                        <div class="row">
+                            <div class="col-5">
+                                <div class="main-image-div">
+                                    <img src="https://geonix.s3.us-east-2.amazonaws.com/16/Geonix%202TB%20Hard%20Disk%20Drive/1.jpg">
+                                </div>
+                            </div>
+                            <div class="col-7">
+                                <div class="main-content-div">
+                                    <div class="extra">
+                                        <div class="rating">
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star-half-stroke"></i>
+                                        </div>
+                                        <p>Desktop 2TB Hard Disk Drive</p>
+                                        <p class="price"> ₹ 3099 <span> ₹ 5999 </span></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4" routerLink="/product/hdd-hard-disk-drive/desktop-3tb-hard-drive">
+                    <div class="man-div">
+                        <div class="row">
+                            <div class="col-5">
+                                <div class="main-image-div">
+                                    <img src="https://geonix.s3.us-east-2.amazonaws.com/3717/Desktop%203TB%20Hard%20Drive%20/1.jpg">
+                                </div>
+                            </div>
+                            <div class="col-7">
+                                <div class="main-content-div">
+                                    <div class="extra">
+                                        <div class="rating">
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star-half-stroke"></i>
+                                        </div>
+                                        <p>Desktop 3TB Hard Drive</p>
+                                        <p class="price"> ₹ 3449 <span> ₹ 6999 </span></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4" routerLink="/product/hdd-hard-disk-drive/desktop-4tb-hard-disk-drive">
+                    <div class="man-div">
+                        <div class="row">
+                            <div class="col-5">
+                                <div class="main-image-div">
+                                    <img src="https://geonix.s3.us-east-2.amazonaws.com/24/Geonix%204TB%20Hard%20Disk%20Drive/1.jpg">
+                                </div>
+                            </div>
+                            <div class="col-7">
+                                <div class="main-content-div">
+                                    <div class="extra">
+                                        <div class="rating">
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star-half-stroke"></i>
+                                        </div>
+                                        <p>Desktop 4TB Hard Disk Drive</p>
+                                        <p class="price"> ₹ 4499 <span> ₹ 8999 </span></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4" routerLink="/product/hdd-hard-disk-drive/desktop-500gb-hard-disk-drive">
+                    <div class="man-div">
+                        <div class="row">
+                            <div class="col-5">
+                                <div class="main-image-div">
+                                    <img src="https://geonix.s3.us-east-2.amazonaws.com/26/Geonix%20500GB%20Hard%20Disk%20Drive/1.jpg">
+                                </div>
+                            </div>
+                            <div class="col-7">
+                                <div class="main-content-div">
+                                    <div class="extra">
+                                        <div class="rating">
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star-half-stroke"></i>
+                                        </div>
+                                        <p>Desktop 500GB Hard Disk Drive</p>
+                                        <p class="price"> ₹ 949 <span> ₹ 1999 </span></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4" routerLink="/product/hdd-hard-disk-drive/desktop-6tb-hard-disk-drive">
+                    <div class="man-div">
+                        <div class="row">
+                            <div class="col-5">
+                                <div class="main-image-div">
+                                    <img src="https://geonix.s3.us-east-2.amazonaws.com/2029/Geonix%206TB%20Hard%20Disk%20Drive/1.jpg">
+                                </div>
+                            </div>
+                            <div class="col-7">
+                                <div class="main-content-div">
+                                    <div class="extra">
+                                        <div class="rating">
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star-half-stroke"></i>
+                                        </div>
+                                        <p>Desktop 6TB Hard Disk Drive</p>
+                                        <p class="price"> ₹ 7999 <span> ₹ 14999 </span></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4" routerLink="/product/hdd-hard-disk-drive/desktop-4tb-hard-disk-drive">
+                    <div class="man-div">
+                        <div class="row">
+                            <div class="col-5">
+                                <div class="main-image-div">
+                                    <img src="https://geonix.s3.us-east-2.amazonaws.com/3057/Geonix%202GB%20DDR2%20800%20MHz/1.jpg">
+                                </div>
+                            </div>
+                            <div class="col-7">
+                                <div class="main-content-div">
+                                    <div class="extra">
+                                        <div class="rating">
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star-half-stroke"></i>
+                                        </div>
+                                        <p>Desktop RAM 2GB DDR2 800 MHz</p>
+                                        <p class="price"> ₹ 349 <span> ₹ 999 </span></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4" routerLink="/product/hdd-hard-disk-drive/desktop-4tb-hard-disk-drive">
+                    <div class="man-div">
+                        <div class="row">
+                            <div class="col-5">
+                                <div class="main-image-div">
+                                    <img src="https://geonix.s3.us-east-2.amazonaws.com/3064/Geonix%202GB%20DDR3%201333%20MHz/1.jpg">
+                                </div>
+                            </div>
+                            <div class="col-7">
+                                <div class="main-content-div">
+                                    <div class="extra">
+                                        <div class="rating">
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star-half-stroke"></i>
+                                        </div>
+                                        <p>Desktop RAM 2GB DDR3 1333 MHz</p>
+                                        <p class="price"> ₹ 399 <span> ₹ 999 </span></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="man-div">
+                        <div class="row">
+                            <div class="col-5">
+                                <div class="main-image-div">
+                                    <img src="https://geonix.s3.us-east-2.amazonaws.com/56/Geonix%20128GB%20Supersonic%20SSD%20Gold%20Edition/1.jpg">
+                                </div>
+                            </div>
+                            <div class="col-7">
+                                <div class="main-content-div">
+                                    <div class="extra">
+                                        <div class="rating">
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star-half-stroke"></i>
+                                        </div>
+                                        <p>Geonix 128GB Supersonic SSD Gold Edition</p>
+                                        <p class="price"> ₹ 869 <span> ₹ 2999 </span></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
