change recommendation section

--- a/src/app/pages/home/recommend-collection/recommend-collection.component.html
+++ b/src/app/pages/home/recommend-collection/recommend-collection.component.html
@@ -1,4 +1,4 @@
-<div class="container for-you" id="Recommendadion">
+<!-- <div class="container for-you" id="Recommendadion">
     <div class="heading heading-flex mb-3">
         <div class="heading-left">
             <h2 class="title">Recommendation For You</h2>
@@ -20,7 +20,7 @@
         </ng-template>
     </div>
 </div>
-<div class="mb-4"></div>
+<div class="mb-4"></div> -->
 <div class="recomand-div">
     <div class="container">
         <div class="recomandmain">
