--- a/src/app/pages/home/recommend-collection/recommend-collection.component.scss
+++ b/src/app/pages/home/recommend-collection/recommend-collection.component.scss
@@ -11,6 +11,7 @@
             margin: 10px;
             border: 1px solid lightgray;
             border-radius: 10px;
+            cursor: pointer;
 
             .main-image-div {
                 display: flex;
