added small popup and blog component

--- a/src/app/pages/home/index/modal-basic/modal-basic.component.html
+++ b/src/app/pages/home/index/modal-basic/modal-basic.component.html
@@ -1,10 +1,10 @@
 <div class="modalon-load">
 	<ng-template #content let-modal>
-		<div class="modal-body">
-			<button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')">
-				<i class="fa-solid fa-circle-xmark"></i></button>
+		<button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+			<i class="fa-solid fa-circle-xmark"></i></button>
+		<div class="modal-body" style="overflow: hidden;">
 				<div class="row">
-					<div class="col-sm-6">
+					<div class="col-sm-6 p-0">
 						<div class="bodymain-div">
 							<iframe src="https://valuetech.hk/wheel/wheel.html" height="600px" width="100%" style="border: none;"></iframe>
 						</div>
