--- a/src/app/pages/home/recommend-collection/recommend-collection.component.html
+++ b/src/app/pages/home/recommend-collection/recommend-collection.component.html
@@ -48,7 +48,7 @@
                                             <i class="fa-solid fa-star-half-stroke"></i>
                                         </div>
                                         <p>Desktop 1TB Hard Disk Drive</p>
-                                        <p class="price"> ₹ 2249 <span> ₹ 3999 </span></p>
+                                        <p class="price"> ₹ 2499 <span> ₹ 3999 </span></p>
                                     </div>
                                 </div>
                             </div>
@@ -100,7 +100,7 @@
                                             <i class="fa-solid fa-star-half-stroke"></i>
                                         </div>
                                         <p>Desktop 3TB Hard Drive</p>
-                                        <p class="price"> ₹ 3449 <span> ₹ 6999 </span></p>
+                                        <p class="price"> ₹ 3199 <span> ₹ 6999 </span></p>
                                     </div>
                                 </div>
                             </div>
@@ -126,7 +126,7 @@
                                             <i class="fa-solid fa-star-half-stroke"></i>
                                         </div>
                                         <p>Desktop 4TB Hard Disk Drive</p>
-                                        <p class="price"> ₹ 4499 <span> ₹ 8999 </span></p>
+                                        <p class="price"> ₹ 4199 <span> ₹ 8999 </span></p>
                                     </div>
                                 </div>
                             </div>
@@ -152,7 +152,7 @@
                                             <i class="fa-solid fa-star-half-stroke"></i>
                                         </div>
                                         <p>Desktop 500GB Hard Disk Drive</p>
-                                        <p class="price"> ₹ 949 <span> ₹ 1999 </span></p>
+                                        <p class="price"> ₹ 899 <span> ₹ 1999 </span></p>
                                     </div>
                                 </div>
                             </div>
@@ -185,7 +185,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4" routerLink="/product/hdd-hard-disk-drive/desktop-4tb-hard-disk-drive">
+                <div class="col-sm-4" routerLink="/product/desktop-ram/desktop-ram-2gb-ddr2-800-mhz">
                     <div class="man-div">
                         <div class="row">
                             <div class="col-5">
@@ -204,14 +204,14 @@
                                             <i class="fa-solid fa-star-half-stroke"></i>
                                         </div>
                                         <p>Desktop RAM 2GB DDR2 800 MHz</p>
-                                        <p class="price"> ₹ 349 <span> ₹ 999 </span></p>
+                                        <p class="price"> ₹ 399 <span> ₹ 999 </span></p>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4" routerLink="/product/hdd-hard-disk-drive/desktop-4tb-hard-disk-drive">
+                <div class="col-sm-4" routerLink="/product/desktop-ram/desktop-ram-2gb-ddr3-1333-mhz">
                     <div class="man-div">
                         <div class="row">
                             <div class="col-5">
@@ -230,14 +230,14 @@
                                             <i class="fa-solid fa-star-half-stroke"></i>
                                         </div>
                                         <p>Desktop RAM 2GB DDR3 1333 MHz</p>
-                                        <p class="price"> ₹ 399 <span> ₹ 999 </span></p>
+                                        <p class="price"> ₹ 449 <span> ₹ 999 </span></p>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-4" routerLink="/product/geonix-ssd/geonix-128gb-supersonic-ssd-gold-edition">
                     <div class="man-div">
                         <div class="row">
                             <div class="col-5">
@@ -256,7 +256,9 @@
                                             <i class="fa-solid fa-star-half-stroke"></i>
                                         </div>
                                         <p>Geonix 128GB Supersonic SSD Gold Edition</p>
-                                        <p class="price"> ₹ 869 <span> ₹ 2999 </span></p>
+                                        <!-- <molla-recommendation-products></molla-recommendation-products> -->
+                                        <p>some text</p>
+                                        <p class="price"> ₹ 899 <span> ₹ 2999 </span></p>
                                     </div>
                                 </div>
                             </div>
