--- a/src/app/pages/shop/shared/sidebar/shop-sidebar-one/shop-sidebar-one.component.html
+++ b/src/app/pages/shop/shared/sidebar/shop-sidebar-one/shop-sidebar-one.component.html
@@ -59,6 +59,8 @@
                             <span  class="item-count">4</span></div>
                     <div  class="filter-item ng-star-inserted"><a  href="/shop/nvme-extaernal-ssd/3cols?category=23&amp;page=1">Keyboard/Mouse</a>
                             <span  class="item-count">2</span></div>
+                    <div  class="filter-item ng-star-inserted"><a  href="/shop/nvme-extaernal-ssd/3cols?category=24&amp;page=1">Laptop Adapters</a>
+                            <span  class="item-count">11</span></div>
                     </div>  
                     </div>
                 </div>
