--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -13,7 +13,7 @@
 
                       <div class="widget-call">
                           <i class="icon-phone"></i>
-                          Got Question? Call us Monday to Saturday
+                          Got Question?
                           <a href="tel:#">+91 8920896230</a>         
                       </div>
                   </div>
@@ -32,6 +32,8 @@
                           <li><b>Head Office</b> : E-45/3,
                             Okhla Industrial Area,Phase 2,
                             New Delhi-110020</li>
+                            
+                          <li>Call us Monday to Saturday (10 : 00 AM to 7 : 00 PM)</li>
                           <li><b>Sales </b>:<a href='tel: +91 8920896230'>8920896230</a></li>
                           <li><b>For B2B Enquiry </b> :- <a href='tel: +91 7011788604'>7011788604</a></li>
                           <li><b>Support </b> :- <a href='tel: +91 9625936905'>9625936905</a></li>
@@ -94,6 +96,7 @@
                                 class="icon-instagram"></i></a>
                             <a href="https://www.facebook.com/Geonixofficial-106566125519939" class="facebook" target="_blank"><i
                                 class="icon-facebook"></i></a>
+                            <a href="https://www.facebook.com/Geonixofficial-106566125519939" class="facebook" target="_blank"><i class="fa-twitter"></i></a>
                             <a href="https://www.linkedin.com/company/geonix" class="linkedin" target="_blank"><i
                                 class="icon-linkedin"></i></a>
                           </div>
