--- a/src/app/shared/components/headers/header/header.component.html
+++ b/src/app/shared/components/headers/header/header.component.html
@@ -273,6 +273,16 @@
                                             <p>KEYRBOARD AND MOUSE</p>
                                         </div>
                                     </div>
+                                    <div class="menu-cat-image" [routerLink]="['shop/keyboard-and-mouse/3cols/']"
+                                        [queryParams]="{category: 24,'page':1}">
+                                        <div class="extra">
+                                            <div class="image">
+                                                <img src="./assets/images/pcategory/laptop-adapter.png"
+                                                    class="img-fluid">
+                                            </div>
+                                            <p>Laptop Adapters</p>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </li>
@@ -280,6 +290,7 @@
                         <!-- <li routerLink='shop/sidebar/3cols/'>About</li> -->
                         <li routerLink='/service-centers'>Service Centers</li>
                         <li routerLink='/track-order'><i class="fa-solid fa-location-dot"></i> Track Order</li>
+                        <!-- <li routerLink='/blogs'> Blogs </li> -->
                     </ul>
                 </div>
 
