--- a/src/app/shared/components/headers/shared/category-menu/category-menu.component.html
+++ b/src/app/shared/components/headers/shared/category-menu/category-menu.component.html
@@ -193,6 +193,14 @@
                         </div>
                     </a>
                 </li>
+                <li class="item-lead" routerLinkActive="active">
+                    <a routerLink="/shop/keyboard-and-mouse/3cols/" [queryParams]="{category: 24,'page':1}">
+                        <div>
+                            <img src="/assets/images/icons/phone-charger.png" class="img-fluid">
+                            Laptop Adapters
+                        </div>
+                    </a>
+                </li>
             </ul>
         </nav>
     </div>
