--- a/src/app/shared/components/headers/shared/mobile-menu/mobile-menu.component.html
+++ b/src/app/shared/components/headers/shared/mobile-menu/mobile-menu.component.html
@@ -155,9 +155,7 @@
                             </li>
                             <li>
                                 <a class="drop-mobile-menu" (click)="submenuToggle($event)">
-                                    <img src="/assets/images/icons/categories.png" class="img-fluid">
-                                    Others
-                                    <span class="mmenu-btn"></span>
+                                    <img src="/assets/images/icons/categories.png" class="img-fluid">Others<span class="mmenu-btn"></span>
                                 </a>
                                 <ul>
                                     <div class="row px-3 mb-2">
@@ -179,6 +177,12 @@
                                             </div>
                                             <p>PRinter Toner</p>
                                         </div>
+                                        <!-- <div class="col-4 text-center" routerLink="/shop/printer-toner/3cols/" [queryParams]="{category: 15,'page':1}">
+                                            <div class="product-image-div">
+                                                <img src="/assets/images/pcategory/2365 PRINTER.png" class="img-fluid">
+                                            </div>
+                                            <p>PRinter Toner</p>
+                                        </div> -->
                                     </div>
                                 </ul>
                             </li>
@@ -203,6 +207,11 @@
                             <li>
                                 <a class="drop-mobile-menu" routerLink="/shop/keyboard-and-mouse/3cols/" [queryParams]="{category: 23,'page':1}">
                                     <img src="/assets/images/icons/keyboard-and-mouse.png" class="img-fluid">Keyboard/Mouse
+                                </a>
+                            </li>
+                            <li>
+                                <a class="drop-mobile-menu" routerLink="/shop/keyboard-and-mouse/3cols/" [queryParams]="{category: 24,'page':1}">
+                                    <img src="/assets/images/icons/phone-charger.png" class="img-fluid">Laptop Adapters
                                 </a>
                             </li>
                         </ul>
