--- a/src/app/pages/home/index/carousel-basic/carousel-basic.component.scss
+++ b/src/app/pages/home/index/carousel-basic/carousel-basic.component.scss
@@ -84,20 +84,9 @@
     }
 
     .one {
-        background-image: url('/assets/images/Geonix\ Hero.gif');
+        background-image: url('/assets/images/Geonix\ Hero\ GIF.gif');
         background-size: cover;
     }
-
-    // .two {
-    //     background-image: url('/assets/images/HDD\ BANNER.jpg');
-    //     background-size: cover;
-    // }
-
-    // .three {
-    //     background-image: url('/assets/images/MOTHERBOARD\ BANNER.jpg');
-    //     background-size: cover;
-    //     background-position: right;
-    // }
 }
 
 // white button with black hover effect start
@@ -195,16 +184,5 @@
             background-image: url('/assets/images/Mobile\ GIF\ Geonix.gif');
             background-size: cover;
         }
-    
-        // .two {
-        //     background-image: url('/assets/images/MOBILEBANNERMOTHERBOARD.jpg');
-        //     background-size: cover;
-        // }
-    
-        // .three {
-        //     background-image: url('/assets/images/MOBILE\ BANNER\ HDD.jpg');
-        //     background-size: cover;
-        //     background-position: right;
-        // }
     }
 }
