--- a/src/app/pages/home/index/index.component.html
+++ b/src/app/pages/home/index/index.component.html
@@ -13,7 +13,7 @@
 
     <molla-home-slider></molla-home-slider>
 
-    <molla-modal-basic></molla-modal-basic>
+    <!-- <molla-modal-basic></molla-modal-basic> -->
 
     <!--  bootstrap slider component end  -->
 
@@ -220,14 +220,7 @@
                 <a href="javascript:;">
                     <img src="./assets/images/MOTHERBOARD BANNER 1920X500.jpg" alt="Banner">
                 </a>
-
                 <div class="banner-content banner-content-right">
-                    <!-- <h3 class="banner-subtitle"><a routerLink="/shop/sidebar/list">Amazing Value</a>
-                                </h3>
-                                <h2 class="banner-title"><a routerLink="/shop/sidebar/list">High Performance 4K
-                                        TVs</a></h2> -->
-                    <!-- <a routerLink="/shop/sidebar/list" class="banner-link">Shop Now <i
-                                        class="icon-long-arrow-right"></i></a> -->
                 </div>
             </div>
 
@@ -235,14 +228,6 @@
                 <a routerLink="/shop/sidebar/list">
                     <img src="./assets/images/HDD BANNER 1920X500.jpg" alt="Banner">
                 </a>
-
-                <!-- <div class="banner-content">
-                                <h3 class="banner-subtitle"><a routerLink="/shop/sidebar/list">Weekend Deal</a></h3>
-                                <h2 class="banner-title"><a routerLink="/shop/sidebar/list">Apple & Accessories</a>
-                                </h2>
-                                <a routerLink="/shop/sidebar/list" class="banner-link">Shop Now <i
-                                        class="icon-long-arrow-right"></i></a>
-                            </div> -->
             </div>
         </owl-carousel>
     </div>
@@ -271,7 +256,20 @@
 
     <!-- <molla-deal-collection [products]="dealProducts" [loaded]="loaded"></molla-deal-collection> -->
 
-
+    <!-- <div class="banner-replace">
+        <div class="container">
+            <div class="banner-replace-main">
+                <h3>Dream Desktop</h3>
+                <div class="product-one">
+                    <i class="fa-solid fa-plus"></i>
+                    <div class="product-one-info">
+                        <p>monitor</p>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit..</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div> -->
 
     <div class="container">
         <hr class="mt-3 mb-6" />
@@ -421,6 +419,9 @@
         </div>
     </div>
 
+    <molla-small-popups></molla-small-popups>
+
+    
     <molla-modal2-basic></molla-modal2-basic>
 
     <div class="insta-post mt-3">
