--- a/src/app/pages/home/index/index.component.scss
+++ b/src/app/pages/home/index/index.component.scss
@@ -1222,6 +1222,63 @@ a{
     }
 }
 
+.banner-replace {
+    .banner-replace-main {
+        background-image: url(/assets/images/home-image.jpg);
+        background-size: cover;
+        min-height: 50vw;
+        padding: 20px;
+        position: relative;
+
+        h3 {
+            color: white;
+        }
+
+        .product-one {
+            position: absolute;
+            top: 18%;
+            background-color: #fff;
+            left: 17vw;
+            width: 50px;
+            height: 50px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-radius: 50%;
+            // overflow: hidden;
+            font-size: 20px;
+            border: 2px solid white;
+            animation: productbutton;
+            animation-duration: 2s;
+            animation-iteration-count: infinite;
+            animation-timing-function: linear;
+
+            .product-one-info {
+                position: absolute;
+                left: 5vw;
+                background-color: #fff;
+                width: 20vw;
+                padding: 10px;
+                border-radius: 5px;
+                box-shadow: 2px 3px 6px 2px #00000085;
+                border: 1px solid lightgray;
+                top: 40px;
+            }
+
+            @keyframes productbutton {
+                0% {
+                    border: 1px solid white;
+                    box-shadow: 0 0 1px white;
+                }
+                100% {
+                    border: 1px solid white;
+                    box-shadow: 0 0 3px 10px #ffffff00;
+                }
+            }
+        }
+    }
+}
+
 @media screen and (max-width: 576px) {
     .center-content {
         display: none;
