--- a/src/app/pages/home/index/modal-basic/modal-basic.component.scss
+++ b/src/app/pages/home/index/modal-basic/modal-basic.component.scss
@@ -23,6 +23,8 @@
     }
     
     .bodymain-div {
+        max-height: 600px;
+        overflow: hidden;
 
         .subscribe-input {
             margin: 25px 0px;
@@ -66,6 +68,14 @@
     }
 
     }
+}
+
+button.btn-close {
+    position: absolute;
+    right: 90px;
+    top: 0px;
+    font-size: 30px;
+    color: white;
 }
 
 @media screen and (max-width: 576px) {
