added refrance code page

--- a/src/app/pages/home/index/carousel-basic/carousel-basic.component.scss
+++ b/src/app/pages/home/index/carousel-basic/carousel-basic.component.scss
@@ -84,7 +84,7 @@
     }
 
     .one {
-        background-image: url('/assets/images/Geonix\ Hero\ GIF.gif');
+        background-image: url('/assets/images/Geonix\ Hero\ Banner.jpeg');
         background-size: cover;
     }
 }
@@ -181,7 +181,7 @@
         }
 
         .one {
-            background-image: url('/assets/images/Mobile\ GIF\ Geonix.gif');
+            background-image: url('/assets/images/Mobile\ GIF\ Geonix.jpeg');
             background-size: cover;
         }
     }
