--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -96,7 +96,7 @@
                                 class="icon-instagram"></i></a>
                             <a href="https://www.facebook.com/Geonixofficial-106566125519939" class="facebook" target="_blank"><i
                                 class="icon-facebook"></i></a>
-                            <a href="https://www.facebook.com/Geonixofficial-106566125519939" class="facebook" target="_blank"><i class="fa-twitter"></i></a>
+                            <a href="https://twitter.com/Geonixoffical" class="facebook" target="_blank"><img src="./assets/images/icons/twitter.png" style="width: 55%;"></a>
                             <a href="https://www.linkedin.com/company/geonix" class="linkedin" target="_blank"><i
                                 class="icon-linkedin"></i></a>
                           </div>
