--- a/src/app/pages/home/blogs/blogs/blogs.component.html
+++ b/src/app/pages/home/blogs/blogs/blogs.component.html
@@ -15,14 +15,14 @@
                 <div class="row">
                     <div class="col-sm-6" *ngFor="let item of items">
                         <div class="blog-image">
-                            <img src="/assets/images/blogs/one.jpg" class="img-fluid">
+                            <img src="http://localhost:8000/{{item.blogImage}}" class="img-fluid">
                         </div>
                         <div class="blog-text">
                             <span>on <b> {{item.publishdate}} </b> </span>
                             <h4>{{item.title}}</h4>
                             <p>{{item.discription}}</p>
                             <div class="readmore-blog">
-                                <a routerLink="/single-blog/{{items[0]._id}}"> Read More <i class="fa-solid fa-arrow-right-long"></i></a>
+                                <a routerLink="/single-blog/{{item._id}}"> Read More <i class="fa-solid fa-arrow-right-long"></i></a>
                             </div>
                         </div>
                     </div>
