--- a/src/app/pages/home/blogs/single-blog/single-blog.component.html
+++ b/src/app/pages/home/blogs/single-blog/single-blog.component.html
@@ -13,7 +13,7 @@
         <div class="row">
             <div class="col-sm-12">
                 <div class="single-blog-image">
-                    <img src="/assets/images/blogs/single-blog-image.jpg" class="img-fluid">
+                    <img src="http://localhost:8000/{{bloginfo.blogImage}}" class="img-fluid">
                 </div>
                 <div class="single-blog-text">
                     <span>by JOHN DOE on {{bloginfo.publishdate}}</span>
