--- a/src/app/pages/home/index/index.component.html
+++ b/src/app/pages/home/index/index.component.html
@@ -297,7 +297,11 @@
                 <div class="col-xs-6 col-lg pe-2 mb-3">
                     <div class="last-sec-div" routerLink="/shop/ssd-gold/3cols/" [queryParams]="{category: 6,'page':1}">
                         <div class="video-div">
-                            <img src="/assets/images/video8.gif" class="img-fluid">
+                            <!-- <img src="/assets/images/video8.gif" class="img-fluid"> -->
+                            <video width="100%" autoplay loop muted>
+                                <source src="/assets/images/video8.mp4" type="video/mp4">
+                                Your browser does not support the video tag.
+                            </video>
                         </div>
                         <div class="ptoduct-image">
                             <img src="./assets/images/pcategory/sata.png" class="img-fluid">
@@ -310,7 +314,11 @@
                 <div class="col-xs-6 col-lg pe-2 mb-3">
                     <div class="last-sec-div" routerLink="/shop/ssd-m2/3cols/" [queryParams]="{category: 7,'page':1}">
                         <div class="video-div">
-                            <img src="/assets/images/video2.gif" class="img-fluid">
+                            <!-- <img src="/assets/images/video2.gif" class="img-fluid"> -->
+                            <video width="100%" autoplay loop muted>
+                                <source src="/assets/images/video2.mp4" type="video/mp4">
+                                Your browser does not support the video tag.
+                            </video>
                         </div>
                         <div class="ptoduct-image">
                             <img src="./assets/images/pcategory/m.2 ssd.png" class="img-fluid">
@@ -324,7 +332,11 @@
                     <div class="last-sec-div" routerLink="/shop/motherboard/3cols/"
                         [queryParams]="{category: 13,'page':1}">
                         <div class="video-div">
-                            <img src="/assets/images/video3.gif" class="img-fluid">
+                            <!-- <img src="/assets/images/video3.gif" class="img-fluid"> -->
+                            <video width="100%" autoplay loop muted>
+                                <source src="/assets/images/video3.mp4" type="video/mp4">
+                                Your browser does not support the video tag.
+                            </video>
                         </div>
                         <div class="ptoduct-image">
                             <img src="/assets/images/H510.png" class="img-fluid">
@@ -338,7 +350,11 @@
                     <div class="last-sec-div" routerLink="/shop/graphic-card/3cols/"
                         [queryParams]="{category: 12,'page':1}">
                         <div class="video-div">
-                            <img src="/assets/images/video7.gif" class="img-fluid">
+                            <!-- <img src="/assets/images/video7.gif" class="img-fluid"> -->
+                            <video width="100%" autoplay loop muted>
+                                <source src="/assets/images/video7.mp4" type="video/mp4">
+                                Your browser does not support the video tag.
+                            </video>
                         </div>
                         <div class="ptoduct-image">
                             <img src="./assets/images/pcategory/GRAPHIC CARD png.png" class="img-fluid">
@@ -351,7 +367,11 @@
                 <div class="col-xs-6 col-lg pe-0 mb-3">
                     <div class="last-sec-div" routerLink="/shop/hdd/3cols/" [queryParams]="{category: 2,'page':1}">
                         <div class="video-div">
-                            <img src="/assets/images/video6.gif" class="img-fluid">
+                            <!-- <img src="/assets/images/video6.gif" class="img-fluid"> -->
+                            <video width="100%" autoplay loop muted>
+                                <source src="/assets/images/video6.mp4" type="video/mp4">
+                                Your browser does not support the video tag.
+                            </video>
                         </div>
                         <div class="ptoduct-image">
                             <img src="./assets/images/pcategory/desktophdd.png" class="img-fluid">
