--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -61,7 +61,7 @@
                           <li><a href="/return-policy">Exchange Policy</a></li>
                           <li><a href="/all-service-centers">Service Centers</a></li>
                           <!-- <li><a href="/service-centers-try">Service Centers try</a></li> -->
-                          <li><a href="https://www.geonix.in/E-Waste%20Page%20Link.pdf">Swach Enviro (E-WASTE)</a></li>
+                          <li><a href="https://www.geonix.in/E-Waste%20Page%20Link.pdf" target="_blank">Swach Enviro (E-WASTE)</a></li>
                       </ul>
                   </div>
               </div>
